[metadata]
name = darkest
version = attr: darkest.version.__version__
author = Alexander Tishin
author_email = 1079805+Mystic-Mirage@users.noreply.github.com
license = MIT
license_file = LICENSE
description = Apply Black formatting for specified lines
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Source Code = https://github.com/Mystic-Mirage/darkest

[options]
packages = find:
install_requires =
    darker
python_requires = >=3.6

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    darkest = darkest.__main__:main

[options.extras_require]
test =
    pytest
    pytest-black
    pytest-isort
