[metadata]
name = darkest
version = attr: darkest.version.__version__
author = Oleksandr Tishyn
author_email = mm@m10e.net
license = MIT
license_file = LICENSE
description = Apply Black formatting for specified lines
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Source Code = https://github.com/Mystic-Mirage/darkest

[options]
packages = find:
install_requires =
    darker>=1.3.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    darkest = darkest.__main__:main

[options.extras_require]
test =
    pytest
    pytest-black-ng
    pytest-isort
